[package]
name = "mailgun-contact-form"
version = "0.1.0"
authors = ["Andrew Thorburn <nzipsi@gmail.com>"]

[dependencies]
actix-web = { version="0.7", features=["rust-tls"] }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
base64 = "0.10"
lazy_static = "1.2"
env_logger = "0.6"
log = "0.4"
url = "1.7"